# SFH-OS

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  seed.txt
.claude/: settings.json
.claude/hooks/: phase-transition.md
.claude/skills/sfh-conductor/: SKILL.md
.claude/skills/sfh-gen/: SKILL.md  fractal-theory.md
.claude/skills/sfh-mfg/: SKILL.md
.claude/skills/sfh-qa/: SKILL.md
.claude/skills/sfh-sim/: SKILL.md
.claude/skills/sfh-viz/: SKILL.md
mcp-servers/acoustics/: package.json
mcp-servers/acoustics/scripts/: acoustic_sim.py
mcp-servers/acoustics/src/: index.ts
mcp-servers/fabrication/: package.json
mcp-servers/fabrication/src/: index.ts
mcp-servers/geometry/: package.json
mcp-servers/geometry/scripts/: generate_horn.py
mcp-servers/geometry/src/: index.ts
mcp-servers/visualization/: package.json
mcp-servers/visualization/src/: index.ts
schemas/: constraint.schema.json  request.schema.json  result.schema.json
sfh_os/: __init__.py  config.py  main.py
sfh_os/agents/: __init__.py  ag_gen.py  ag_mfg.py  ag_qa.py  ag_sim.py  base.py
sfh_os/conductor/: __init__.py  orchestrator.py  state.py
sfh_os/manifests/: __init__.py  constraint.py  request.py  result.py
sfh_os/mcp/: __init__.py  protocol.py
sfh_os/mcp/tools/: __init__.py  fabrication.py  geometry.py  simulation.py  verification.py
sfh_os/pipeline/: __init__.py  phase1_synthesis.py  phase2_validation.py  phase3_pathing.py  phase4_execution.py  phase5_verification.py
sfh_os/storage/: __init__.py  history.py
