[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sfh-os"
version = "0.1.0"
description = "Syn-Fractal Horn Orchestration System - Multi-agent framework for autonomous acoustic horn design and manufacturing"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.20.0",
    "numpy>=1.26.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
sfh = "sfh_os.main:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
